# openapi.yaml
@@ -250,18 +250,35 @@ paths:
       tags:
         - Favorites
       summary: Adiciona um novo favorito
-      security:
-        - bearerAuth: []
       requestBody:
         description: Dados do favorito
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Favorite'
+              type: object
+              properties:
+                name:
+                  type: string
+                  description: Nome do favorito
+                  example: "Meu Favorito"
+                user_id:
+                  type: integer
+                  description: ID do usuário associado ao favorito
+                  example: 1
+                items:
+                  type: array
+                  items:
+                    type: integer
+                  description: IDs dos itens associados ao favorito
+                  example: [1, 2, 3]
       responses:
         '201':
           description: Favorito adicionado com sucesso
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Favorite'
         '400':
           description: Comando inválido
         '500':
@@ -564,9 +581,6 @@ components:
         category_id:
           type: integer
           example: 1
-        favorites_id:
-          type: integer
-          example: 1
         author_id:
           type: integer
           example: 1
@@ -574,14 +588,25 @@ components:
       type: object
       properties:
         id:
-          type: string
-          example: "1"
-        user_id:
           type: integer
           example: 1
         name:
           type: string
-          example: "Nome do Favorito"
+          example: "Meu Favorito"
+        user_id:
+          type: integer
+          example: 1
+        items:
+          type: array
+          items:
+            type: object
+            properties:
+              id:
+                type: integer
+                example: 1
+              name:
+                type: string
+                example: "Item 1"
     Category:
       type: object
       properties:
